--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap": "^5.3.6",
     "bulma": "^1.0.1",
     "classnames": "^2.5.1",
     "modern-css-reset": "^1.4.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.3.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.2",
