--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-paginate": "^8.3.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^6.25.1",
+    "react-select": "^5.10.1",
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.2",
     "swiper": "^11.2.6"
